# GPTRouter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task-definition.json
.github/workflows/: aws-deploy.yml
app/: config.py  main.py  model.py
app/openai/: request.py
app/schemas/: kakao_ai_chatbot_request.py  kakao_request.py  kakao_response.py  openai_request.py  openai_response.py
